# mathcore_nostd

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
benches/: expression_bench.rs
examples/: demo.rs  optimization.rs  scientific_computing.rs
src/: lib.rs
src/calculus/: limits.rs  mod.rs
src/differential/: mod.rs
src/engine/: mod.rs
src/matrix/: mod.rs
src/ml/: mod.rs
src/parser/: mod.rs
src/precision/: mod.rs
src/solver/: mod.rs
src/transforms/: mod.rs
src/types/: mod.rs
tests/: integration_test.rs
