[package]
name = "mathcore"
version = "0.3.1"
edition = "2021"
authors = ["Mehmet Yilmaz <mehmet@nonanti.dev>"]
description = "Symbolic math library and computer algebra system for Rust"
license = "MIT"
repository = "https://github.com/Nonanti/mathcore"
keywords = ["math", "symbolic", "algebra", "calculus", "cas"]
categories = ["mathematics", "science"]

[dependencies]
nom = { version = "7.1", default-features = false, features = ["alloc"] }
num-complex = { version = "0.4", default-features = false, features = ["libm"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
num-bigint = { version = "0.4", default-features = false }
num-rational = { version = "0.4", default-features = false, features = ["num-bigint"] }
nalgebra = { version = "0.32", default-features = false, features = ["libm", "alloc"] }
indexmap = { version = "2.0", default-features = false }
wasm-bindgen = { version = "0.2", optional = true, default-features = false }
getrandom = { version = "0.2", features = ["js"], optional = true }
thiserror-no-std = "2.0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
wasm = ["wasm-bindgen", "getrandom"]

[dev-dependencies]
criterion = "0.5"
approx = "0.5"
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"
